# allegro-game

./: CMakeLists.txt  README.md
include/: Game.h
source/: Game.cpp
src/: Game.cpp
